--- a/html-css/hw-03/index.html
+++ b/html-css/hw-03/index.html
@@ -18,10 +18,10 @@
 
             <nav class="navigation">
                 <ul class="navigation_ul">
-                    <li class="navigation_li_a"></li>
-                    <li class="navigation_li"></li>
-                    <li class="navigation_li"></li>
-                    <li class="navigation_li"></li>
+                    <li class="navigation_li_a">lifestyle</li>
+                    <li class="navigation_li">photodiary</li>
+                    <li class="navigation_li">music</li>
+                    <li class="navigation_li">travel</li>
                 </ul>
             </nav>
 
@@ -94,14 +94,11 @@
                         </li>
                     </ul>
                 </div>
-
+                <div class="btn-footer">
+                    <button class="btn-more" type="button">Load more</button>
+                </div>
             </section>
         </main>
-        <footer>
-            <div class="btn-footer">
-                <button class="btn-more" type="button">Load more</button>
-            </div>
-        </footer>
     </div>
 </body>
 
