--- a/html-css/hw-03/index.html
+++ b/html-css/hw-03/index.html
@@ -16,12 +16,12 @@
 
         <header class="page-header">
 
-            <nav class="navigation">
-                <ul class="navigation_ul">
-                    <li class="navigation_li_a">lifestyle</li>
-                    <li class="navigation_li">photodiary</li>
-                    <li class="navigation_li">music</li>
-                    <li class="navigation_li">travel</li>
+            <nav>
+                <ul class="nav-ul">
+                    <li class="nav-li active">lifestyle</li>
+                    <li class="nav-li">photodiary</li>
+                    <li class="nav-li">music</li>
+                    <li class="nav-li">travel</li>
                 </ul>
             </nav>
 
