--- a/html-css/hw-04/index.html
+++ b/html-css/hw-04/index.html
@@ -56,7 +56,7 @@
             <div class="conteiner">
                 <h1 class="featured_title">featured products</h1>
 
-                <ul class="list">
+                <ul class="list clearfix">
 
                     <li class="list_block">
                         <a href="#">
@@ -168,7 +168,7 @@
 
         <!-- SECTION NEWS -->
         <section class="news">
-            <div class="container">
+            <div class="conteiner">
                 <div class="news_title">latest news</div>
 
                 <ul class="list-feature clearfix">
