--- a/html-css/hw-05/index.html
+++ b/html-css/hw-05/index.html
@@ -55,8 +55,8 @@
 
         <section class="slider">
             <div class="slider_wrapper">
-                <img src="./img/image_slide.jpg" alt="girls" class="slider-img" height="600" >
-                <div class="container content-wrap">
+                <img src="./img/image_slide.jpg" alt="girls" class="slider-img" height="600">
+                <div class="conteiner content-wrap">
                     <button type="submit" class="slider-btn slider-btn__prev pe-7s-angle-left pe-5x pe-va"></button>
                     <button type="submit" class="slider-btn slider-btn__next pe-7s-angle-right pe-5x pe-va"></button>
                     <div class="box-slider-text">
@@ -80,6 +80,13 @@
                             <img class="list_block_img" src="./img/photo_1.png" alt="pr1" width="255" height="280">
                         </a>
 
+                        <div class="overlay-wrap">
+                            <button type="button" class="btn pe-7s-like pe-2x pe-va"></button>
+                            <button type="button" class="btn pe-7s-shuffle pe-2x pe-va"></button>
+                            <button type="button" class="btn pe-7s-clock pe-2x pe-va"></button>
+                            <button type="button" class="btn-lg"><a class="pe-7s-cart pe-2x pe-va"></a> add to
+                                cart</button>
+                        </div>
                         <div class="list_block-info clearfix">
                             <h2 class="list_block-title">
                                 <a href="#">blue tshirt</a>
@@ -126,7 +133,7 @@
                             <span class="list_block-price">$56</span>
                         </div>
                     </li>
-                   
+
                 </ul>
             </div>
         </section>
