--- a/html-css/hw-05/index.html
+++ b/html-css/hw-05/index.html
@@ -76,17 +76,19 @@
                 <ul class="list clearfix">
 
                     <li class="list_block">
-                        <a href="#">
-                            <img class="list_block_img" src="./img/photo_1.png" alt="pr1" width="255" height="280">
-                        </a>
 
-                        <div class="overlay-wrap">
-                            <button type="button" class="btn pe-7s-like pe-2x pe-va"></button>
-                            <button type="button" class="btn pe-7s-shuffle pe-2x pe-va"></button>
-                            <button type="button" class="btn pe-7s-clock pe-2x pe-va"></button>
-                            <button type="button" class="btn-lg"><a class="pe-7s-cart pe-2x pe-va"></a> add to
-                                cart</button>
+                        <div class="overlay">
+                            <img class="list_block_img" src="./img/photo_1.png" alt="pr1" width="255" height="280">
+                            <div class="overlay-wrap">
+                                <button type="button" class="btn pe-7s-like pe-2x pe-va"></button>
+                                <button type="button" class="btn pe-7s-shuffle pe-2x pe-va"></button>
+                                <button type="button" class="btn pe-7s-clock pe-2x pe-va"></button>
+                                <button type="button" class="btn_cart">
+                                    <a class="pe-7s-cart pe-2x pe-va"></a>
+                                    add to cart</button>
+                            </div>
                         </div>
+
                         <div class="list_block-info clearfix">
                             <h2 class="list_block-title">
                                 <a href="#">blue tshirt</a>
