--- a/html-css/hw-05/index.html
+++ b/html-css/hw-05/index.html
@@ -80,12 +80,14 @@
                         <div class="overlay">
                             <img class="list_block_img" src="./img/photo_1.png" alt="pr1" width="255" height="280">
                             <div class="overlay-wrap">
-                                <button type="button" class="btn pe-7s-like pe-2x pe-va"></button>
+                                <div class="card-position">
+                                    <button type="button" class="btn pe-7s-like pe-2x pe-va"></button>
                                 <button type="button" class="btn pe-7s-shuffle pe-2x pe-va"></button>
                                 <button type="button" class="btn pe-7s-clock pe-2x pe-va"></button>
                                 <button type="button" class="btn_cart">
                                     <a class="pe-7s-cart pe-2x pe-va"></a>
                                     add to cart</button>
+                                </div>
                             </div>
                         </div>
 
