--- a/html-css/hw-05/index.html
+++ b/html-css/hw-05/index.html
@@ -82,11 +82,11 @@
                             <div class="overlay-wrap">
                                 <div class="card-position">
                                     <button type="button" class="btn pe-7s-like pe-2x pe-va"></button>
-                                <button type="button" class="btn pe-7s-shuffle pe-2x pe-va"></button>
-                                <button type="button" class="btn pe-7s-clock pe-2x pe-va"></button>
-                                <button type="button" class="btn_cart">
-                                    <a class="pe-7s-cart pe-2x pe-va"></a>
-                                    add to cart</button>
+                                    <button type="button" class="btn pe-7s-shuffle pe-2x pe-va"></button>
+                                    <button type="button" class="btn pe-7s-clock pe-2x pe-va"></button>
+                                    <button type="button" class="btn_cart">
+                                        <a class="pe-7s-cart pe-2x pe-va"></a>
+                                        add to cart</button>
                                 </div>
                             </div>
                         </div>
@@ -100,43 +100,76 @@
                     </li>
 
                     <li class="list_block">
-                        <a href="#">
+
+                        <div class="overlay">
                             <img class="list_block_img" src="./img/photo_2.png" alt="pr2" width="255" height="280">
-                        </a>
+                            <div class="overlay-wrap">
+                                <div class="card-position">
+                                    <button type="button" class="btn pe-7s-like pe-2x pe-va"></button>
+                                    <button type="button" class="btn pe-7s-shuffle pe-2x pe-va"></button>
+                                    <button type="button" class="btn pe-7s-clock pe-2x pe-va"></button>
+                                    <button type="button" class="btn_cart">
+                                        <a class="pe-7s-cart pe-2x pe-va"></a>
+                                        add to cart</button>
+                                </div>
+                            </div>
+                        </div>
 
                         <div class="list_block-info clearfix">
                             <h2 class="list_block-title">
-                                <a href="#">woman shirt</a>
+                                <a href="#">blue tshirt</a>
                             </h2>
-                            <span class="list_block-price">$31</span>
+                            <span class="list_block-price">$26</span>
                         </div>
                     </li>
 
                     <li class="list_block">
-                        <a href="#">
+
+                        <div class="overlay">
                             <img class="list_block_img" src="./img/photo_3.png" alt="pr3" width="255" height="280">
-                        </a>
+                            <div class="overlay-wrap">
+                                <div class="card-position">
+                                    <button type="button" class="btn pe-7s-like pe-2x pe-va"></button>
+                                    <button type="button" class="btn pe-7s-shuffle pe-2x pe-va"></button>
+                                    <button type="button" class="btn pe-7s-clock pe-2x pe-va"></button>
+                                    <button type="button" class="btn_cart">
+                                        <a class="pe-7s-cart pe-2x pe-va"></a>
+                                        add to cart</button>
+                                </div>
+                            </div>
+                        </div>
 
                         <div class="list_block-info clearfix">
                             <h2 class="list_block-title">
-                                <a href="#">yellow tshirt</a>
+                                <a href="#">blue tshirt</a>
                             </h2>
-                            <span class="list_block-price">$21</span>
+                            <span class="list_block-price">$26</span>
                         </div>
                     </li>
-
                     <li class="list_block">
-                        <a href="#">
+
+                        <div class="overlay">
                             <img class="list_block_img" src="./img/photo_4.png" alt="pr4" width="255" height="280">
-                        </a>
+                            <div class="overlay-wrap">
+                                <div class="card-position">
+                                    <button type="button" class="btn pe-7s-like pe-2x pe-va"></button>
+                                    <button type="button" class="btn pe-7s-shuffle pe-2x pe-va"></button>
+                                    <button type="button" class="btn pe-7s-clock pe-2x pe-va"></button>
+                                    <button type="button" class="btn_cart">
+                                        <a class="pe-7s-cart pe-2x pe-va"></a>
+                                        add to cart</button>
+                                </div>
+                            </div>
+                        </div>
 
                         <div class="list_block-info clearfix">
                             <h2 class="list_block-title">
-                                <a href="#">cool lingerie</a>
+                                <a href="#">blue tshirt</a>
                             </h2>
-                            <span class="list_block-price">$56</span>
+                            <span class="list_block-price">$26</span>
                         </div>
                     </li>
+                   
 
                 </ul>
             </div>
