--- a/html-css/hw-07/index.html
+++ b/html-css/hw-07/index.html
@@ -76,7 +76,7 @@
 
                 <!-- FORM -->
 
-                <form action="#">
+                <form action="#" class="footer_form">
                     <div class="form">
                         <input type="text" name="name" placeholder="your Name *" class="firsname" required
                             minlength="2">
@@ -84,7 +84,8 @@
                         <input type="text" name="subject" placeholder="subject" class="subject">
                         <textarea name="Message" cols="20" rows="10" placeholder="Your message *"></textarea>
                     </div>
-                    <input type="submit" value="Send Message">
+                    
+                    <button class="message">send message</button>
 
                 </form>
             </div>
