--- a/html-css/hw-07/index.html
+++ b/html-css/hw-07/index.html
@@ -85,7 +85,7 @@
                         <textarea name="Message" cols="20" rows="10" placeholder="Your message *"></textarea>
                     </div>
 
-                    <button class="message">send message</button>
+                    <button class="message_btn">send message</button>
 
                 </form>
             </div>
