--- a/html-css/hw-06/index.html
+++ b/html-css/hw-06/index.html
@@ -43,7 +43,7 @@
     <!-- MAIN -->
 
     <main>
-        <h1 class="visually-hidden"></h1>
+        <h1 class="visually-hidden">test</h1>
 
         <!-- SECTION SERVICES -->
 
@@ -108,13 +108,13 @@
         </section>
 
         <!-- SECTION TEAM -->
-        
+
         <section class="team" id="team">
             <div class="container">
                 <div class="title team-title">
                     <h2 class="main-title"><span>Who we are</span>Meet our team</h2>
                 </div>
-
+ 
                 <div class="description">
                     <p class="description-text"> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
                         tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
